# autonomous_exam_proctoring_robot

./: .gitignore  README.md  WHEEL_RADIUS_CONFIG_GUIDE.md  classroom_map.pgm  classroom_map.yaml  readme.md  rebuild.sh
assets/images/: README.md
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/rviz/: sim.rviz  slam.rviz
src/robot_bringup/launch/: sim_classroom.launch.py  sim_teleop_classroom.launch.py  slam_classroom.launch.py  teleop_smooth.launch.py
src/robot_bringup/scripts/: cmd_vel_smoother.py  odom_to_base_footprint_tf.py  teleop_toggle_smooth.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: controllers.yaml
src/robot_description/config/rviz/: description.rviz
src/robot_description/launch/: display.launch.py  display_aep.launch.py  display_aep_gazebo.launch.py  display_gazebo_rviz2.launch.py  display_rviz2.launch.py
src/robot_description/urdf/: AEP_Robot.urdf  AEP_Robot_macro.urdf.xacro  aep_main.urdf.xacro  main.urdf.xacro
src/robot_description/urdf/control/: aep_gazebo_plugins.urdf.xacro
src/robot_gazebo/: CMakeLists.txt  package.xml
src/robot_gazebo/config/: ros_gz_bridge.yaml
src/robot_gazebo/launch/: aep_gazebo.launch.py
src/robot_gazebo/models/aep_robot/: model.config  model.sdf
src/robot_nav/: CMakeLists.txt  package.xml
src/robot_sim/: CMakeLists.txt
src/robot_sim/launch/: classroom_world.launch.py
src/robot_sim/worlds/: classroom.sdf
src/robot_slam/: CMakeLists.txt
src/robot_slam/config/: slam_toolbox_online_async.yaml
tools/: measure_wheel_radius.py
(+6 files in other folders)
